# StaticLinearAlgebra

./: Cargo.toml  changelog.md
src/: errors.rs  lib.rs
src/matrix/: mod.rs
src/objects/: matrix.rs  mod.rs  vector_column.rs  vector_row.rs
src/operators/: add.rs  mul.rs
